# weather_dashboard

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
dashboard/templates/: dashboard.html
dashboard/tests/: test_views.py
static/css/: main.css
static/js/: dashboard.js
weather/: models.py  serializers.py  tasks.py  urls.py  views.py
weather/management/commands/: __init__.py  populate_cities.py
weather/migrations/: 0001_initial.py  0002_weatherrecord.py
weather/tests/: test_management.py  test_models.py  test_serializers.py  test_tasks.py  test_views.py
weather_dashboard/: celery.py  settings.py  urls.py
